# Web-Services-CWK2

./: .gitignore  README.md  benchmark.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml  ci.yml
src/: crawler.py  indexer.py  main.py  search.py
test/: test_crawler.py  test_indexer.py  test_search.py
test/data/: page1.html  page2.html
